# jotbook

./: .gitignore  CREDITS.md  LICENSE.md  README.md  pyproject.toml
src/: main.py  quillpad.py
src/jotbook/: __init__.py  cli.py  quillpad.py
